# gridCar

./: #Makefile#  .gitignore  CMakeLists.txt  Makefile  README.md  cocktailMixer.ino  common.mk  conanfile.txt  gridCar.ino
src/: CMakeLists.txt  communicatorHeadquaters.cpp  communicatorHeadquaters.hpp  main.cpp  motor.cpp  motor.hpp  mover.cpp  mover.hpp  package.cpp  radio.hpp
src/communication/: CMakeLists.txt  arduinoTransmitter.cpp  arduinoTransmitter.hpp  communicatorHeadquaters.cpp  communicatorHeadquaters.hpp  coordinateBroadcaster.hpp  coordinateListener.cpp  coordinateListener.hpp  locationListener.hpp  message.hpp  messageFromCar.cpp  messageFromCar.hpp  messageIn.hpp  messageOut.cpp  messageOut.hpp  messageToCar.cpp  messageToCar.hpp  radio.hpp  transmission.cpp  transmission.hpp  transmitter.hpp
src/controller/: arduinoMover.cpp  arduinoMover.hpp  communicatorHeadquaters.cpp  communicatorHeadquaters.hpp  mover.cpp  mover.hpp
src/entity/: coordinate.cpp  coordinate.hpp  direction.cpp  direction.hpp  package.hpp  transmission.cpp  transmission.hpp
src/model/: arduinoMotor.cpp  arduinoMotor.hpp  arduinoTracker.cpp  arduinoTracker.hpp  motor.cpp  motor.hpp  radio.hpp  tracker.cpp  tracker.hpp
src/movement/: CMakeLists.txt  alignInLeftTurn.cpp  alignInLeftTurn.hpp  alignInRightTurn.cpp  alignInRightTurn.hpp  alignInTurnAround.cpp  alignInTurnAround.hpp  arduinoMover.cpp  arduinoMover.hpp  center.cpp  centerInLeftTurn.cpp  centerInRightTurn.cpp  centerInTurnAround.cpp  centerInTurnAround.hpp  findLine.cpp  findLineInLeftTurn.cpp  findLineInLeftTurn.hpp  findLineInRightTurn.cpp  findLineInRightTurn.hpp  findLineInTurnAround.cpp  findLineInTurnAround.hpp  findNextLineInLeftTurn.cpp  findNextLineInRightTurn.cpp  findNextLineInTurnAround.cpp  findNextToNextLineInTurnAround.cpp  findSecondLineInTurnAround.cpp  findSecondLineInTurnAround.hpp  followLine.cpp  followLine.hpp  goal.hpp  gridGoal.cpp  gridGoal.hpp  leaveFirstLineInTurnAround.cpp  leaveFirstLineInTurnAround.hpp  leaveLine.cpp  leaveLine.hpp  leaveNextLineInTurnAround.cpp  leaveNextLineInTurnAround.hpp  leaveOriginLineInLeftTurn.cpp  leaveOriginLineInRightTurn.cpp  (+34 more)
src/timer/: CMakeLists.txt  arduinoTimer.cpp  arduinoTimer.hpp  timer.hpp
test/: CMakeLists.txt  main_test.cpp  test_communicatorHeadquaters.cpp  test_mover.cpp
test/communication/: CMakeLists.txt  communicatorHeadquaters_test.cpp  messageFromCar_test.cpp  messageIn_test.cpp  messageOut_test.cpp  messageToCar_test.cpp  transmission_ostream.hpp
test/controller/: communicatorHeadquaters_test.cpp  mover_test.cpp
test/entity/: IOOperatorOverloading.cpp  IOOperatorOverloading.hpp  coordinate_test.cpp  direction_test.cpp  operatorOverloading.cpp  operatorOverloading.hpp
test/movement/: #centerInRightTurn_test.cpp#  CMakeLists.txt  alignInRightTurn_test.cpp  alignInRightTurn_test.cpp_old  (+25 more)
(+123 files in other folders)
